# extunix

./: .gitignore  .merlin  .ocamlformat-ignore  .travis.yml  CHANGES.txt  LICENSE.txt  Makefile  README.md  README.txt  TODO  _oasis  _tags  appveyor.yml  dune-project  extunix.opam  extunix.opam.template  myocamlbuild.ml  opam  setup.ml
.github/workflows/: main.yml
discover/: discover.ml
ppx_have/: dune  ppx_have.ml
src/: META  api.odocl  atfile.c  bigarray.c  common.c  common.h  dirfd.c  discover.ml  dune  endian.c  endian_helper.h  endianba.c  eventfd.c  execinfo.c  extUnix.ml  extUnix.mli  extUnix.mlpp  extUnix.pp.ml  extUnixBA.ml  extUnixBA.mlpp  extunix.mllib  extunix.odocl  extunix_stubs.c  extunixba.mllib  fadvise.c  fallocate.c  fexecve.c  fsync.c  ioctl.c  ioctl_siocgifconf.c  libextunix.clib  libextunix_stubs.clib  libextunixba_stubs.clib  malloc.c  memalign.c  mktemp.c  mman.c  mount.c  pa_have.ml  poll.c  (+23 more)
src/TODO/fadvise/: fadvise.ml  fadviseC.c
src/TODO/fallocate/: fallocate.ml  fallocateC.c
src/TODO/ftruncate/: ftruncate.ml  ftruncateC.c
src/TODO/resource/: META  POSIXResource.ml  POSIXResource_stub.c  _oasis
src/TODO/uname/: META  uname-posix.c  uname-unknown.c  uname.ml
test/: .merlin  dune  test.ml  test_user_namespace.ml  testba.ml
web/: Makefile  index.brtx
