(rule
 (targets config.h config.ml)
 (deps
  (:gen ../discover/discover.exe))
 (action
  (run %{gen})))

(rule
 (targets all.ml specific.ml)
 (deps
  (:extUnix extUnix.pp.ml)
  (:gen ../ppx_have/ppx_have.exe))
 (action
  (progn
   (run %{gen} --impl %{extUnix} -o all.ml --gen-all)
   (run %{gen} --impl %{extUnix} -o specific.ml))))

(library
 (name ExtUnix)
 (public_name extunix)
 (modules_without_implementation ExtUnix)
 (libraries unix bigarray bytes)
 (foreign_stubs
  (language c)
  (flags :standard)
  (names
   atfile
   bigarray
   common
   dirfd
   endian
   endianba
   execinfo
   fadvise
   fallocate
   fexecve
   fsync
   ioctl_siocgifconf
   malloc
   memalign
   mktemp
   mman
   mount
   poll
   pread_pwrite_ba
   ptrace
   pts
   read_cred
   resource
   sendmsg
   signalfd
   sockopt
   splice
   statvfs
   stdlib
   sysconf
   sysinfo
   syslog
   time
   tty_ioctl
   uname
   unistd
   unshare
   eventfd)))
